my profile page with photo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <div class="card">
       <h1>Olá, pessoal! Meu nome é Thiago</h1>
-      <img src="./images/thiago.jpg" alt="foto" class="foto-circle" title="Thiago">
+      <img src="images/thiago.JPG" alt="foto" class="foto-circle" title="Thiago">
       <p>Trabalho na Receita Federal há 5 anos como auditor <br/>
          e estou apreendendo a fazer um site.</p>
       <a id="site" href="#">site</a>
